--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,7 +46,9 @@ jobs:
         run: npm ci --legacy-peer-deps
 
       - name: Build with Next.js
-        run: npm run build
+        run: npm run export
+        env:
+          NODE_ENV: production
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
