--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,7 +46,7 @@ jobs:
         run: npm ci --legacy-peer-deps
 
       - name: Build with Next.js
-        run: npm run export
+        run: npm run build
         env:
           NODE_ENV: production
 
