--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
-    "export": "next build && next export",
-    "deploy": "npm run build && touch out/.nojekyll && git add out/ -f && git commit -m 'Deploy to GitHub Pages' && git subtree push --prefix=out origin gh-pages"
+    "deploy": "npm run build"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
