feat: Implementa PWA completa con service worker, manifest e prompt installazione

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,16 +1,60 @@
 {
   "name": "Fitness Tracker App",
   "short_name": "FitnessApp",
-  "description": "A modern fitness tracking application",
+  "description": "A modern fitness tracking application for workout management and progress tracking",
   "start_url": "/jim/",
+  "scope": "/jim/",
   "display": "standalone",
+  "orientation": "portrait-primary",
   "background_color": "#ffffff",
   "theme_color": "#3B82F6",
+  "categories": ["health", "fitness", "lifestyle"],
+  "lang": "it",
+  "dir": "ltr",
   "icons": [
     {
       "src": "/jim/logo.svg",
-      "sizes": "100x100",
-      "type": "image/svg+xml"
+      "sizes": "any",
+      "type": "image/svg+xml",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/jim/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/jim/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/jim/icon-maskable-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/jim/icon-maskable-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
+    }
+  ],
+  "screenshots": [
+    {
+      "src": "/jim/screenshot-wide.png",
+      "sizes": "1280x720",
+      "type": "image/png",
+      "form_factor": "wide"
+    },
+    {
+      "src": "/jim/screenshot-narrow.png",
+      "sizes": "720x1280",
+      "type": "image/png",
+      "form_factor": "narrow"
     }
   ]
 }
