--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
-    "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -55,7 +54,7 @@
     "framer-motion": "^11.0.0",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
-    "lucide-react": "^0.454.0",
+    "lucide-react": "^0.541.0",
     "next": "15.2.4",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
@@ -71,11 +70,14 @@
     "zod": "3.25.67"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@tailwindcss/postcss": "^4.1.9",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "postcss": "^8.5",
+    "postcss-flexbugs-fixes": "^5.0.2",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
     "typescript": "^5"
